# routes/index.js
@@ -2,4 +2,5 @@ const users = require("./userRoutes");
 const shipment = require("./shipmentRoutes");
 const blogs = require("./blogRoute");
 const guide = require("./guideRoute");
-module.exports = [users, shipment, blogs, guide];
+const notification = require("./notificationRoute");
+module.exports = [users, shipment, blogs, guide, notification];
